--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,16 @@ body {
 }
 
 #book {
-    width: 90%;
-    height: 90%;
+    width: 100vw;
+    height: 100vh;
     position: relative;
     perspective: 2000px;
     display: flex;
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .page {
@@ -28,18 +30,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .page img {
     width: 100%;
     height: 100%;
-    object-fit:contain;
+    object-fit: contain;
 }
 
 #page1 { z-index: 3; }
 #page2 { z-index: 2; }
 #page3 { z-index: 1; }
-
 
 #controls {
     position: absolute;
