--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ body {
 }
 
 .page {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: absolute;
     transform-origin: left;
     transition: transform 1s;
