--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
+/* Reset default margin and padding */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* Base styles */
 html, body {
     height: 100%;
-    margin: 0;
-    padding: 0;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +25,6 @@ html, body {
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
-    box-sizing: border-box;
 }
 
 .page {
@@ -32,14 +37,12 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-sizing: border-box;
 }
 
 .page img {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    box-sizing: border-box;
 }
 
 #page1 { z-index: 3; }
@@ -53,7 +56,6 @@ html, body {
     justify-content: space-between;
     width: 100%;
     padding: 0 20px;
-    box-sizing: border-box;
 }
 
 button {
