--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ html, body {
 .page img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: fill;
 }
 
 #page1 { z-index: 3; }
