--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,14 @@ html, body {
     height: 200%;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    ;
     background-color: #f0f0f0;
 
 }
 
 #book {
     width: 100vw;
-    height: 100vh;
+  
     position: relative;
     perspective: 2000px;
     display: flex;
