--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,18 @@
 
 /* Base styles */
 html, body {
-    height: 200%;
+    height: 100%;
     width: 100%;
     display: flex;
-    ;
+    justify-content: center;
+    align-items: center;
     background-color: #f0f0f0;
-
+    overflow: hidden; /* Prevent scrolling */
 }
 
 #book {
     width: 100vw;
-  
+    height: 100vh;
     position: relative;
     perspective: 2000px;
     display: flex;
@@ -41,7 +42,7 @@ html, body {
 .page img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: contain;
 }
 
 #page1 { z-index: 3; }
