--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,11 @@
-/* Reset default margin and padding */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 /* Base styles */
-html, body {
-    height: 100%;
-    width: 100%;
+body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    margin: 0;
     background-color: #f0f0f0;
-    
 }
 
 #book {
@@ -25,11 +17,13 @@ html, body {
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .page {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: absolute;
     transform-origin: left;
     transition: transform 1s;
@@ -37,6 +31,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .page img {
@@ -56,6 +51,7 @@ html, body {
     justify-content: space-between;
     width: 100%;
     padding: 0 20px;
+    box-sizing: border-box;
 }
 
 button {
